# prompt_evaluator

./: README.md
backend/: main.py  pyproject.toml  requirements.txt  test.ipynb
backend/core/: __init__.py  auth.py  db.py  historyUtils.py  userUtils.py
backend/routes/: __init__.py  auth.py  history.py  prompt.py
backend/schema/: __init__.py  prompt.py  user.py
backend/services/: __init__.py  llm.py
frontend/src/app/: globals.css  layout.js  page.js
frontend/src/app/compare/: page.js
frontend/src/app/history/: page.js
frontend/src/app/login/: page.js
frontend/src/app/playground/: page.js
frontend/src/app/signup/: page.js
frontend/src/components/: HistoryDetailPanel.js  HistorySidebar.js  Navbar.js  PromptForm.js  ResultCard.js  Spinner.js
frontend/src/lib/: api.js  useAuth.js
