[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiohappyeyeballs==2.5.0",
    "aiohttp==3.11.13",
    "aiohttp-retry==2.9.1",
    "aioredis==2.0.1",
    "aiosignal==1.3.2",
    "altgraph==0.17.4",
    "annotated-types==0.7.0",
    "anyio==4.9.0",
    "argon2-cffi==23.1.0",
    "argon2-cffi-bindings==21.2.0",
    "arrow==1.3.0",
    "asgiref==3.8.1",
    "asttokens==2.4.1",
    "async-lru==2.0.4",
    "async-timeout==5.0.1",
    "attrs==23.2.0",
    "azure-common==1.1.28",
    "babel==2.14.0",
    "backports-weakref==1.0.post1",
    "bcrypt==4.3.0",
    "beautifulsoup4==4.12.3",
    "bleach==6.1.0",
    "bs4==0.0.2",
    "cachetools==5.5.0",
    "certifi==2024.2.2",
    "cffi==1.16.0",
    "charset-normalizer==3.3.2",
    "click==8.1.8",
    "colorama==0.4.6",
    "comm==0.2.2",
    "comtypes==1.4.6",
    "contourpy==1.2.1",
    "cycler==0.12.1",
    "debugpy==1.8.1",
    "decorator==5.1.1",
    "defusedxml==0.7.1",
    "deprecated==1.2.18",
    "distlib==0.3.8",
    "distro==1.9.0",
    "django==5.0.6",
    "dnspython==2.7.0",
    "dotenv>=0.9.9",
    "ecdsa==0.19.1",
    "et-xmlfile==1.1.0",
    "executing==2.0.1",
    "fastapi==0.115.11",
    "fastjsonschema==2.19.1",
    "filelock==3.15.4",
    "fonttools==4.51.0",
    "fqdn==1.5.1",
    "frozenlist==1.5.0",
    "google-ai-generativelanguage==0.6.10",
    "google-api-core==2.19.1",
    "google-api-python-client==2.142.0",
    "google-auth==2.34.0",
    "google-auth-httplib2==0.2.0",
    "google-genai==1.24.0",
    "google-generativeai==0.8.3",
    "google-geo-type==0.3.11",
    "google-maps-places==0.1.24",
    "googleapis-common-protos==1.63.2",
    "googlemaps==4.10.0",
    "grpcio==1.66.0",
    "grpcio-status==1.62.3",
    "h11==0.14.0",
    "httpcore==1.0.5",
    "httplib2==0.22.0",
    "httpx==0.28.1",
    "idna==3.6",
    "iniconfig==2.0.0",
    "ipykernel==6.29.4",
    "ipython==8.23.0",
    "ipywidgets==8.1.2",
    "isoduration==20.11.0",
    "jedi==0.19.1",
    "jinja2==3.1.3",
    "jiter==0.8.2",
    "joblib==1.4.2",
    "json5==0.9.24",
    "jsonpointer==2.4",
    "jsonschema==4.21.1",
    "jsonschema-specifications==2023.12.1",
    "jupyter==1.0.0",
    "jupyter-client==8.6.1",
    "jupyter-console==6.6.3",
    "jupyter-core==5.7.2",
    "jupyter-events==0.10.0",
    "jupyter-lsp==2.2.4",
    "jupyter-server==2.13.0",
    "jupyter-server-terminals==0.5.3",
    "jupyterlab==4.1.5",
    "jupyterlab-pygments==0.3.0",
    "jupyterlab-server==2.25.4",
    "jupyterlab-widgets==3.0.10",
    "kiwisolver==1.4.5",
    "langchain-groq>=1.1.2",
    "limits==5.5.0",
    "markupsafe==2.1.5",
    "matplotlib==3.9.0",
    "matplotlib-inline==0.1.6",
    "mistune==3.0.2",
    "mouseinfo==0.1.3",
    "mpmath==1.3.0",
    "multidict==6.1.0",
    "mysql-connector-python==8.3.0",
    "narwhals==2.13.0",
    "nbclient==0.10.0",
    "nbconvert==7.16.3",
    "nbformat==5.10.3",
    "nest-asyncio==1.6.0",
    "notebook==7.1.2",
    "notebook-shim==0.2.4",
    "numpy==1.26.4",
    "oauthlib==3.2.2",
    "openai==1.65.3",
    "openpyxl==3.1.2",
    "overrides==7.7.0",
    "packaging==24.0",
    "pandas==2.2.1",
    "pandocfilters==1.5.1",
    "parso==0.8.3",
    "passlib[bcrypt]==1.7.4",
    "pefile==2023.2.7",
    "phonenumbers==8.13.44",
    "pillow==10.3.0",
    "platformdirs==4.2.0",
    "plotly==6.5.0",
    "pluggy==1.4.0",
    "prometheus-client==0.20.0",
    "prompt-toolkit==3.0.43",
    "propcache==0.3.0",
    "proto-plus==1.25.0",
    "protobuf==4.25.4",
    "psutil==5.9.8",
    "pure-eval==0.2.2",
    "pyasn1==0.6.0",
    "pyasn1-modules==0.4.0",
    "pyaudio==0.2.14",
    "pyautogui==0.9.54",
    "pycparser==2.22",
    "pydantic-core==2.20.1",
    "pydantic[email]==2.8.2",
    "pygame==2.5.2",
    "pygetwindow==0.0.9",
    "pygments==2.17.2",
    "pyinstaller==6.5.0",
    "pyinstaller-hooks-contrib==2024.3",
    "pyjwt==2.10.1",
    "pymongo==4.11.2",
    "pymsgbox==1.0.9",
    "pyparsing==3.1.2",
    "pyperclip==1.8.2",
    "pypiwin32==223",
    "pyqt5==5.15.10",
    "pyqt5-qt5==5.15.2",
    "pyqt5-sip==12.13.0",
    "pyrect==0.2.0",
    "pyscreeze==0.1.30",
    "pytest==8.1.1",
    "python-dateutil==2.9.0.post0",
    "python-dotenv==1.0.0",
    "python-jose==3.5.0",
    "python-json-logger==2.0.7",
    "python-multipart==0.0.6",
    "python-oauth2==1.1.1",
    "pyttsx3==2.91",
    "pytweening==1.2.0",
    "pytz==2024.1",
    "pywin32==306",
    "pywin32-ctypes==0.2.2",
    "pywinpty==2.0.13",
    "pyyaml==6.0.1",
    "pyzmq==25.1.2",
    "qtconsole==5.5.1",
    "qtpy==2.4.1",
    "referencing==0.34.0",
    "requests==2.31.0",
    "requests-oauthlib==1.3.1",
    "rfc3339-validator==0.1.4",
    "rfc3986-validator==0.1.1",
    "rpds-py==0.18.0",
    "rsa==4.9",
    "scikit-learn==1.4.2",
    "scipy==1.13.0",
    "seaborn==0.13.2",
    "send2trash==1.8.2",
    "setuptools==69.2.0",
    "six==1.16.0",
    "slowapi==0.1.9",
    "sniffio==1.3.1",
    "soupsieve==2.5",
    "speechrecognition==3.10.4",
    "sqlparse==0.5.0",
    "stack-data==0.6.3",
    "starlette==0.46.0",
    "sympy==1.14.0",
    "tabulate==0.9.0",
    "tenacity==8.5.0",
    "terminado==0.18.1",
    "threadpoolctl==3.5.0",
    "tinycss2==1.2.1",
    "tornado==6.4",
    "tqdm==4.66.5",
    "traitlets==5.14.2",
    "tweepy==4.14.0",
    "twilio==9.6.3",
    "types-python-dateutil==2.9.0.20240316",
    "typing-extensions==4.12.2",
    "tzdata==2024.1",
    "uri-template==1.3.0",
    "uritemplate==4.1.1",
    "urllib3==2.2.1",
    "uv==0.8.14",
    "uvicorn==0.34.0",
    "virtualenv==20.26.3",
    "wcwidth==0.2.13",
    "webcolors==1.13",
    "webencodings==0.5.1",
    "websocket-client==1.7.0",
    "websockets==15.0.1",
    "widgetsnbextension==4.0.10",
    "wrapt==1.17.3",
    "yarl==1.18.3",
]
