[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi==0.115.11",
    "uvicorn==0.34.0",
    "pymongo==4.11.2",
    "python-dotenv==1.0.0",
    "python-jose==3.5.0",
    "passlib[bcrypt]==1.7.4",
    "bcrypt==4.3.0",
    "python-multipart==0.0.6",
    "pydantic[email]>=2.8",
    "langchain-groq",
    "langchain-google-genai",
    "langchain-openai",
]
